# hexperiments

./: .gitignore  README.md  pyproject.toml
app/: main.js  package-lock.json  package.json  webpack.main.config.ts  webpack.rules.ts
app/.webpack/main/: index.js  index.js.map
app/.webpack/renderer/: main_window.06bc1a7670f9c27642de.hot-update.js  main_window.49b3c9a1470bad837d76.hot-update.js  main_window.56ca234e245f9e731c05.hot-update.js  main_window.78fa9f0531bf473645e6.hot-update.js  main_window.78fa9f0531bf473645e6.hot-update.json  main_window.a99e346b2364b3be9b68.hot-update.js
app/.webpack/renderer/main_window/: index.js  (+2 more)
app/src/: app.tsx  hextypes.ts  index.html  index.jsx  index.ts  index.tsx
app/src/components/: BoardComponent.tsx  SetupComponent.tsx
app/src/game/: Board.ts  Cell.ts  Game.ts  MoveResult.ts
app/src/socket/: HexClient.ts
game/: Cargo.toml  game_stats.csv  game_stats_board_size.csv  game_stats_iterations.csv
game/src/: main.rs
game/src/game/: Game.ts  board.rs  cell.rs  game.rs  mod.rs  move_result.rs
game/src/server/: message_handler.rs  mod.rs  server.rs  servera.rs  socket_manager.rs  subprocess_manager.rs
my-new-app/.webpack/renderer/: main_window.3dc98349221504ec4e4f.hot-update.js  main_window.3dc98349221504ec4e4f.hot-update.json  main_window.b68b19ce91836b5f95df.hot-update.js  main_window.bfcd534c37d4e6c66778.hot-update.js  main_window.bfcd534c37d4e6c66778.hot-update.json
player/: base_agent.py  main.py
player/agents/mcts/: agent.py  mcts_tree.py
player/agents/pure-mcts/: agent.py
player/agents/random/: agent.py
(+3 files in other folders)
