[tool.poetry]
name = "hexperiments"
version = "0.1.0"
description = ""
authors = ["Rudy McIntyre <rudym335@gmail.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
pyzmq = "^25.1.2"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
